# Health_Checker

./: .gitignore  README.md  main.py  modelecg.py  requirements.txt  test.py
arduino/: main.ino
backend/: app.py
backend/app/: main.py  models.py  settings.py
backend/app/routers/: export.py  ingest.py  legacy.py  mode.py  recording.py  ws.py
backend/app/services/: mode.py  nnsender.py  recorder.py  storage.py  stream.py
checker/: Cargo.toml  README.md
checker/src/: filters.rs  http_sink.rs  lib.rs  main.rs  mode.rs  parser.rs  serial.rs
checker/tests/: backend_bridge.rs
frontend/: app.py  ecg.html  emg.html  index.html  ppg.html  resp.html
frontend/css/: styles.css
frontend/js/: chart.js  page.js
frontend/templates/: base.html  ecg.html  index.html  nav.html  signal.html
model/: main.ipynb  main_yolo.ipynb
