[package]
name = "ecg_bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.40", features = ["full"] }
tokio-serial = "5.4.5"         # фиксация на стабильной 5.4.x
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"           # для StreamExt::next()

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

serialport = "4.3"

[dev-dependencies]
tracing-test = "0.2"
