[package]
name = "goida_bridge"
version = "2.2.8"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.40", features = ["rt", "macros", "time", "io-util", "sync", "io-std"] }
tokio-serial = "5.4.5"         
tokio-stream = "0.1"        

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

serialport = { version = "4.3", default-features = false }

[dev-dependencies]
